# src/domain/User/dto/create-user.dto.ts
@@ -1,0 +1,12 @@
+import { IsString } from 'class-validator';
+
+export class CreateUserDto {
+	@IsString()
+	name: string;
+
+	@IsString()
+	email: string;
+
+	@IsString()
+	password: string;
+}
